5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1716_2508.log
== TEST (2019-05-16 01:13:16) 
-- CODE:
n = int(input('Digite n: '))
soma = 3
cont = 4
sinal = 1
d1 = 2
d2 = 3
d3 = 4 
while (cont < n):
	x = soma + sinal * (cont/(d1*d2*d3)
	sinal = sinal * (-1)
	d1 = d1 + 2
	d2 = d2 + 2
	d3 = d3 + 2
print(round(x,8))
	
	
	

-- ERROR:
File "XXXX", line 10
    sinal = sinal * (-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:13:48) 
-- CODE:
n = int(input('Digite n: '))
soma = 3
cont = 4
sinal = 1
d1 = 2
d2 = 3
d3 = 4 
while (cont < n):
	x = soma + sinal * (cont/(d1*d2*d3))
	sinal = sinal * (-1)
	d1 = d1 + 2
	d2 = d2 + 2
	d3 = d3 + 2
print(round(x,8))
	
	
	

-- ERROR:
File "XXXX", line 10
    sinal = sinal * (-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:14:11) 
-- CODE:
n = int(input('Digite n: '))
soma = 3
cont = 4
sinal = 1
d1 = 2
d2 = 3
d3 = 4 
while (cont < n):
	soma = soma + sinal * (cont/(d1*d2*d3))
	sinal = sinal * (-1)
	d1 = d1 + 2
	d2 = d2 + 2
	d3 = d3 + 2
print(round(soma,8))
	
	
	

-- ERROR:
File "XXXX", line 10
    sinal = sinal * (-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:14:43) 
-- CODE:
n = int(input('Digite n: '))
soma = 3
cont = 4
sinal = 1
d1 = 2
d2 = 3
d3 = 4 
while (cont < n):
	soma = soma + sinal * (cont/(d1*d2*d3))
	sinal = sinal * (-1)
	d1 = d1 + 2
	d2 = d2 + 2
	d3 = d3 + 2
print(round(soma,8))
	
	
	

-- ERROR:
File "XXXX", line 10
    sinal = sinal * (-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:15:06) 
-- CODE:
n = float(input('Digite n: '))
soma = 3
cont = 4
sinal = 1
d1 = 2
d2 = 3
d3 = 4 
while (cont < n):
	soma = soma + sinal * (cont/(d1*d2*d3))
	sinal = sinal * (-1)
	d1 = d1 + 2
	d2 = d2 + 2
	d3 = d3 + 2
print(round(soma,8))
	
	
	

-- ERROR:
File "XXXX", line 10
    sinal = sinal * (-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:15:16) 
-- CODE:
n = float(input('Digite n: '))
soma = 3
cont = 4
sinal = 1
d1 = 2
d2 = 3
d3 = 4 
while (cont < n):
	soma = soma + sinal * (cont/(d1*d2*d3))
	sinal = sinal * (-1)
	d1 = d1 + 2
	d2 = d2 + 2
	d3 = d3 + 2
print(round(soma,8))
	
	
	

-- ERROR:
File "XXXX", line 10
    sinal = sinal * (-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:15:24) 
-- CODE:
n = float(input('Digite n: '))
soma = 3
cont = 4
sinal = 1
d1 = 2
d2 = 3
d3 = 4 
while (cont < n):
	soma = soma + sinal * (cont/(d1*d2*d3))
	sinal = sinal * (-1)
	d1 = d1 + 2
	d2 = d2 + 2
	d3 = d3 + 2
print(round(soma,8))
	
	
	

-- ERROR:
File "XXXX", line 10
    sinal = sinal * (-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:15:40) 
-- CODE:
n = float(input('Digite n: '))
soma = 3
cont = 4
sinal = 1
d1 = 2
d2 = 3
d3 = 4 
while (cont > n):
	soma = soma + sinal * (cont/(d1*d2*d3))
	sinal = sinal * (-1)
	d1 = d1 + 2
	d2 = d2 + 2
	d3 = d3 + 2
print(round(soma,8))
	
	
	

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:16:31) 
-- CODE:
n = float(input('Digite n: '))
soma = 3
cont = 4
sinal = 1
d1 = 2
d2 = 3
d3 = 4 
while (cont < n):
	soma = soma + sinal * (cont/(d1*d2*d3))
	sinal = sinal * (-1)
	d1 = d1 + 2
	d2 = d2 + 2
	d3 = d3 + 2
print(round(soma,8))
	
	
	

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 05:59:16) 
-- CODE:
n = int(input('Digite n: '))
soma = 3
cont = 1
sinal = 1
d1 = 2
d2 = 3
d3 = 4 
while (cont < n):
	soma = soma + (4/(d1*d2*d3)) * sinal
	sinal = sinal * (-1)
	d1 = d1 + 2
	d2 = d2 + 2
	d3 = d3 + 2
print(round(soma,8))
	
	
	

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 05:59:42) 
-- CODE:
n = int(input('Digite n: '))
soma = 3
cont = 1
sinal = 1
d1 = 2
d2 = 3
d3 = 4 
while (cont < n):
	soma = soma + (4/(d1*d2*d3)) * sinal
	sinal = sinal * (-1)
	d1 = d1 + 2
	d2 = d2 + 2
	d3 = d3 + 2
	cont = cont + 1
print(round(soma,8))
	
	
	

-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 05:59:49) 
-- CODE:
n = int(input('Digite n: '))
soma = 3
cont = 1
sinal = 1
d1 = 2
d2 = 3
d3 = 4 
while (cont < n):
	soma = soma + (4/(d1*d2*d3)) * sinal
	sinal = sinal * (-1)
	d1 = d1 + 2
	d2 = d2 + 2
	d3 = d3 + 2
	cont = cont + 1
print(round(soma,8))
	
	
	

-- EXECUTION TIME:
0.117512
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
